--- a/releases/2019s1r1.md
+++ b/releases/2019s1r1.md
@@ -1,3 +1,26 @@
+##OBS. this is only our proposal for a release and should be changed if needed.
+
+| \*\*//Release 2019S1R1 schedule//\*\* | | \*\*Deadline\*\* |
+\*\*Date\*\* | \*\*Document\*\* | \*\*Notes\*\* | | Release requirements
+released | TBD |
+[Requirements](releases/2019s1r1/requirements "wikilink") | | | API
+development finished | TBD | | | | App/Frontend development finished |
+TBD | | | | PO approves that requirements are met | TBD | | | | Release
+|TBD | | | See the requirements document for a description of what must
+be implemented before the release can be considered finished.
+
+## Release
+
+|\*\*Component\*\*|\*\*Source code\*\*| |Weekplanner
+app|[http://git.giraf.cs.aau.dk/Giraf-AndroidApps/weekplanner/src/2018S4R1](http://git.giraf.cs.aau.dk/Giraf-AndroidApps/weekplanner/src/2018S4R1 "wikilink")|
+|RestAPI|[http://git.giraf.cs.aau.dk/Giraf-Rest/web-api/commits/2018S4R1](http://git.giraf.cs.aau.dk/Giraf-Rest/web-api/commits/2018S4R1 "wikilink")|
+If the source code links for some reason don't work. Look for the
+release tag \`2018S4R1\` in wherever the repository is now located.
+
+
+
+
+
 **OBS. this is only our proposal for a release and should be changed if needed. **
 
 | **//Release 2019S1R1 schedule//**                                                                                            |
