--- a/releases/2018s3r2.md
+++ b/releases/2018s3r2.md
@@ -1,7 +1,7 @@
-| **Release 2018S3R2 schedule**          |                 |                                                  |           |
-| -------------------------------------- |-----------------| -------------------------------------------------|-----------| 
+| **_Release 2018S3R2 schedule_**          |                 |                                                  |           |
+|----------------------------------------|-----------------| -------------------------------------------------|-----------| 
 | **Deadline**                           | **Date**        | **Document**                                     | **Notes** |
-| Release requirements released          | Mon 2018-04-16  |                                                  |           |
+| Release requirements released          | Mon 2018-04-16  | [Requirements](http://web.giraf.cs.aau.dk/w/releases/2018s3r2/requirements/)                                                 |           |
 | API development finished               | Mon 2018-04-30  |                                                  |           | 
 | App/Frontend development finished      | Thu 2018-05-03  |                                                  |           |
 | PO approves that requirements are met  | Mon 2018-05-07  |                                                  |           |
