--- a/releases/2018s3r2.md
+++ b/releases/2018s3r2.md
@@ -1,19 +1,19 @@
-| **_Release 2018S3R2 schedule_**          |                 |                                                  |           |
-|----------------------------------------|-----------------| -------------------------------------------------|-----------| 
-| **Deadline**                           | **Date**        | **Document**                                     | **Notes** |
-| Release requirements released          | Mon 2018-04-16  | [Requirements](http://web.giraf.cs.aau.dk/w/releases/2018s3r2/requirements/)                                                 |           |
-| API development finished               | Mon 2018-04-30  |                                                  |           | 
-| App/Frontend development finished      | Thu 2018-05-03  |                                                  |           |
-| PO approves that requirements are met  | Mon 2018-05-07  |                                                  |           |
-| Release                                | Tue 2018-05-08  |                                                  |           |
+| **_Release 2018S3R2 schedule_**        |                 |                                                   |           |
+|----------------------------------------|-----------------| --------------------------------------------------|-----------| 
+| **Deadline**                           | **Date**        | **Document**                                      | **Notes** |
+| Release requirements released          | Mon 2018-04-16  | [Requirements](releases/2018s3r2/requirements.md) |           |
+| API development finished               | Mon 2018-04-30  |                                                   |           | 
+| App/Frontend development finished      | Thu 2018-05-03  |                                                   |           |
+| PO approves that requirements are met  | Mon 2018-05-07  |                                                   |           |
+| Release                                | Tue 2018-05-08  |                                                   |           |
 
 See the requirements document for a description of what must be implemented before the release can be considered finished. 
 
  **Release**
 
-|**Component**   |**Source code**                                                            |
-| -------------- |---------------------------------------------------------------------------|
-|Weekplanner app | http://git.giraf.cs.aau.dk/Giraf-AndroidApps/weekplanner/src/2018S3R2     |
-|RestAPI         | http://git.giraf.cs.aau.dk/Giraf-Rest/web-api/commits/2018S3R2            |
+|**Component**   |**Source code**                                                   |
+| -------------- |------------------------------------------------------------------|
+|Weekplanner app | https://github.com/aau-giraf/weekplanner/releases/tag/2018S3R2   |
+|RestAPI         | https://github.com/aau-giraf/web-api/releases/tag/2018S3R2       |
 
 If the source code links for some reason don't work. Look for the release tag `2018S3R2` in wherever the repository is now located.
