--- a/releases/2018s4r1.md
+++ b/releases/2018s4r1.md
@@ -1,7 +1,7 @@
 | **_Release 2018S4R1 schedule_**        |                 |                                                   |           |
 |----------------------------------------|-----------------| --------------------------------------------------|-----------| 
 | **Deadline**                           | **Date**        | **Document**                                      | **Notes** |
-| Release requirements released          | Mon 2018-04-30  | [Requirements](releases/2018s4r1/requirements.md) |           |
+| Release requirements released          | Mon 2018-04-30  | [Requirements](2018s4r1/requirements.md) |           |
 | API development finished               | Mon 2018-05-07  |                                                   |           | 
 | App/Frontend development finished      | Thu 2018-05-10  |                                                   |           |
 | PO approves that requirements are met  | Mon 2018-05-14  |                                                   |           |
