--- a/releases/2019s1r1.md
+++ b/releases/2019s1r1.md
@@ -1,39 +1,20 @@
-##OBS. this is only our proposal for a release and should be changed if needed.
+**OBS. this is only our proposal for a release and should be changed if needed.**
 
-| \*\*//Release 2019S1R1 schedule//\*\* | | \*\*Deadline\*\* |
-\*\*Date\*\* | \*\*Document\*\* | \*\*Notes\*\* | | Release requirements
-released | TBD |
-[Requirements](releases/2019s1r1/requirements "wikilink") | | | API
-development finished | TBD | | | | App/Frontend development finished |
-TBD | | | | PO approves that requirements are met | TBD | | | | Release
-|TBD | | | See the requirements document for a description of what must
-be implemented before the release can be considered finished.
+| _**Release 2019S1R1 schedule**_             |          |                                          |               |
+|---------------------------------------------|----------|------------------------------------------|---------------|
+| **Deadline**                                | **Date** | **Document**                             |   **Notes**   |
+| Release requirements released               |   TBD    | [Requirements](2019s1r1/requirements.md) |               |
+| API development finished                    |   TBD    |                                          |               |
+| App/Frontend development finished           |   TBD    |                                          |               |
+| PO approves that requirements are met       |   TBD    |                                          |               |
+| Release                                     |   TBD    |                                          |               |
 
-## Release
-
-|\*\*Component\*\*|\*\*Source code\*\*| |Weekplanner
-app|[http://git.giraf.cs.aau.dk/Giraf-AndroidApps/weekplanner/src/2018S4R1](http://git.giraf.cs.aau.dk/Giraf-AndroidApps/weekplanner/src/2018S4R1 "wikilink")|
-|RestAPI|[http://git.giraf.cs.aau.dk/Giraf-Rest/web-api/commits/2018S4R1](http://git.giraf.cs.aau.dk/Giraf-Rest/web-api/commits/2018S4R1 "wikilink")|
-If the source code links for some reason don't work. Look for the
-release tag \`2018S4R1\` in wherever the repository is now located.
-
-
-
-
-
-**OBS. this is only our proposal for a release and should be changed if needed. **
-
-| **//Release 2019S1R1 schedule//**                                                                                            |
-| **Deadline**                                               | **Date**                 | **Document**   | **Notes** |
-| Release requirements released                  | TBD | [[releases/2019s1r1/requirements|Requirements]]    | |
-| API development finished                         | TBD |                             | |
-| App/Frontend development finished        | TBD  |                             |                                               |
-| PO approves that requirements are met   | TBD |                             |                                              |
-| Release                                                        |TBD  |  |                                             |
 See the requirements document for a description of what must be implemented before the release can be considered finished. 
 
-==Release==
-|**Component**|**Source code**|
-|Weekplanner app|[[http://git.giraf.cs.aau.dk/Giraf-AndroidApps/weekplanner/src/2018S4R1]]|
-|RestAPI|[[http://git.giraf.cs.aau.dk/Giraf-Rest/web-api/commits/2018S4R1]]|
+# Release
+| **Component**          | **Source code**                              |
+|------------------------|----------------------------------------------|
+|Weekplanner app         | https://github.com/aau-giraf/weekplanner/releases/tag/2018S4R1   |
+|RestAPI                 | https://github.com/aau-giraf/web-api/releases/tag/2018S4R1       |
+
 If the source code links for some reason don't work. Look for the release tag `2018S4R1` in wherever the repository is now located.
