--- a/releases/2019s1r2.md
+++ b/releases/2019s1r2.md
@@ -1,1 +1,20 @@
+| **_Release 2019S1R2 schedule_**        |                 |                                                   |           |
+|----------------------------------------|-----------------| --------------------------------------------------|-----------| 
+| **Deadline**                           | **Date**        | **Document**                                      | **Notes** |
+| Release requirements released          | TBD             | [Requirements](2019s1r2/requirements.md)          |           |
+| API development finished               | TBD             |                                                   |           | 
+| App/Frontend development finished      | TBD             |                                                   |           |
+| PO approves that requirements are met  | TBD             |                                                   |           |
+| Release                                | TBD             |                                                   |           |
+
+See the requirements document for a description of what must be implemented before the release can be considered finished. 
+
+ **Release**
+
+|**Component**   |**Source code**                                                   |
+| -------------- |------------------------------------------------------------------|
+|Weekplanner app | https://github.com/aau-giraf/weekplanner/releases/tag/2019S1R2   |
+|RestAPI         | https://github.com/aau-giraf/web-api/releases/tag/2019S1R2       |
+
+If the source code links for some reason don't work. Look for the release tag `2019S1R2` in wherever the repository is now located.
 
