New file structure

--- a/releases/2019s1r1/2019s1r1.md
+++ b/releases/2019s1r1/2019s1r1.md
@@ -3,7 +3,7 @@
 | _**Release 2019S1R1 schedule**_             |          |                                          |               |
 |---------------------------------------------|----------|------------------------------------------|---------------|
 | **Deadline**                                | **Date** | **Document**                             |   **Notes**   |
-| Release requirements released               |   TBD    | [Requirements](2019s1r1/requirements.md) |               |
+| Release requirements released               |   TBD    | [Requirements](requirements.md) |               |
 | API development finished                    |   TBD    |                                          |               |
 | App/Frontend development finished           |   TBD    |                                          |               |
 | PO approves that requirements are met       |   TBD    |                                          |               |
