--- a/releases/2018s3r2/2018s3r2.md
+++ b/releases/2018s3r2/2018s3r2.md
@@ -1,7 +1,7 @@
 | **_Release 2018S3R2 schedule_**        |                 |                                                   |           |
 |----------------------------------------|-----------------| --------------------------------------------------|-----------| 
 | **Deadline**                           | **Date**        | **Document**                                      | **Notes** |
-| Release requirements released          | Mon 2018-04-16  | [Requirements](2018s3r2/requirements.md) |           |
+| Release requirements released          | Mon 2018-04-16  | [Requirements](requirements.md) |           |
 | API development finished               | Mon 2018-04-30  |                                                   |           | 
 | App/Frontend development finished      | Thu 2018-05-03  |                                                   |           |
 | PO approves that requirements are met  | Mon 2018-05-07  |                                                   |           |
