--- a/releases/2019s1r2/2019s1r2.md
+++ b/releases/2019s1r2/2019s1r2.md
@@ -1,7 +1,7 @@
 | **_Release 2019S1R2 schedule_**        |                 |                                                   |           |
 |----------------------------------------|-----------------| --------------------------------------------------|-----------| 
 | **Deadline**                           | **Date**        | **Document**                                      | **Notes** |
-| Release requirements released          | TBD             | [Requirements](2019s1r2/requirements.md)          |           |
+| Release requirements released          | TBD             | [Requirements](requirements.md)          |           |
 | API development finished               | TBD             |                                                   |           | 
 | App/Frontend development finished      | TBD             |                                                   |           |
 | PO approves that requirements are met  | TBD             |                                                   |           |
