--- a/releases/2019s2r1/2019s2r1.md
+++ b/releases/2019s2r1/2019s2r1.md
@@ -19,6 +19,6 @@ The features that were implemented were :
 * The user could log in
 * The user could choose a citizen
 * The user could choose a weekplan belonging to that citizen
-* The chosen weekplan with it's associated Activities were shown on the screen
+* The chosen week plan with its associated activities were shown on the screen
 
 
