--- a/releases/2019s3r1/2019s3r1.md
+++ b/releases/2019s3r1/2019s3r1.md
@@ -33,10 +33,10 @@ These were the features that were implemented:
 * The user could add a new weekplan
 * The user could add an activity to a weekplan
 * The user could move an activity from one day to another
-* The user could press on a activity to see details about the activity
+* The user could press on an activity to see details about the activity
 * The user could mark an activity as done
 * The user was prompted with a dialog box that required him to type in his password when he wanted to change from citizen to guardian mode
 
-Even though the dialog box for switching between citizen and guardian mode the modes themselves were not implemented yet. So the dialog box did not change the mode.
+Even though the dialog box for switching between citizen and guardian mode, the modes themselves were not implemented yet. So the dialog box did not change the mode.
 
 
