--- a/releases/2019s1r1/2019s1r1.md
+++ b/releases/2019s1r1/2019s1r1.md
@@ -1,20 +1,1 @@
-**OBS. this is only our proposal for a release and should be changed if needed.**
-
-| _**Release 2019S1R1 schedule**_             |          |                                          |               |
-|---------------------------------------------|----------|------------------------------------------|---------------|
-| **Deadline**                                | **Date** | **Document**                             |   **Notes**   |
-| Release requirements released               |   TBD    | [Requirements](requirements.md) |               |
-| API development finished                    |   TBD    |                                          |               |
-| App/Frontend development finished           |   TBD    |                                          |               |
-| PO approves that requirements are met       |   TBD    |                                          |               |
-| Release                                     |   TBD    |                                          |               |
-
-See the requirements document for a description of what must be implemented before the release can be considered finished. 
-
-# Release
-| **Component**          | **Source code**                              |
-|------------------------|----------------------------------------------|
-|Weekplanner app         | https://github.com/aau-giraf/weekplanner/releases/tag/2019S1R1   |
-|RestAPI                 | https://github.com/aau-giraf/web-api/releases/tag/2019S1R1       |
-
-If the source code links for some reason don't work. Look for the release tag `2019S1R1` in wherever the repository is now located.
+There was no release at the end of sprint 1 because we decided to change framework from Xamarin to Flutter two weeks before the sprint ended. This meant that we started from scratch and didn't have anything to release at the end of sprint 1. The last part of sprint 1 was instead spent on getting familiar with the Flutter framework, implementing some simple user stories and getting the core functionality ready so that we could build an application around it.
