converted releases to single pages

--- a/docs/releases/2018s3r1.md
+++ b/docs/releases/2018s3r1.md
@@ -1,7 +1,9 @@
+# 2018s3r1
+
 | _**Release 2018S3R1 schedule**_                            |                          |                |           |
 |------------------------------------------------------------|--------------------------|----------------|-----------|
 | **Deadline**                                               | **Date**                 | **Document**   | **Notes** |
-| Release requirements released                 | Mon 2018-04-16 | [Requirements](requirements.md)|         |
+| Release requirements released                              | Mon 2018-04-16           | [Requirements](#requirements)|         |
 | API development finished                                   | Mon 2018-04-23           |                |           |
 | App/Frontend development finished                          | Thu 2018-04-26           |                |           |
 | PO approves that requirements are met                      | Mon 2018-04-30           |                |           |
@@ -9,10 +11,16 @@
 
 See the requirements document for a description of what must be implemented before the release can be considered finished. 
 
-# Release
+## Release
 | **Component**     | **Source code**                                                                                |
 |-------------------|------------------------------------------------------------------------------------------------|
 |Weekplanner app    |https://github.com/aau-giraf/weekplanner/releases/tag/2018S3R1                                  |
 |RestAPI            |https://github.com/aau-giraf/web-api/releases/tag/2018S3R1                                      |
 
 If the source code links for some reason don't work. Look for the release tag `2018S3R1` in wherever the repository is now located.
+
+## Requirements
+Scheduled for releases on Tuesday 1st of May 2018
+
+This release is a little special. We are trying out a new four week development and release cycle. 
+The only requirements for this release is that it is in a working state, bug free and able to be released on time.
