--- a/docs/releases/2018s4r1.md
+++ b/docs/releases/2018s4r1.md
@@ -1,4 +1,26 @@
-# PO Requirements for release 2018S4R1 - Guardian Quality of Life
+# 2018s4r1
+
+| **_Release 2018S4R1 schedule_**        |                 |                                                   |           |
+|----------------------------------------|-----------------| --------------------------------------------------|-----------| 
+| **Deadline**                           | **Date**        | **Document**                                      | **Notes** |
+| Release requirements released          | Mon 2018-04-30  | [Requirements](#requirements) |           |
+| API development finished               | Mon 2018-05-07  |                                                   |           | 
+| App/Frontend development finished      | Thu 2018-05-10  |                                                   |           |
+| PO approves that requirements are met  | Mon 2018-05-14  |                                                   |           |
+| Release                                | Tue 2018-05-15  |                                                   |           |
+
+See the requirements document for a description of what must be implemented before the release can be considered finished. 
+
+## Release
+
+|**Component**   |**Source code**                                                            |
+| -------------- |---------------------------------------------------------------------------|
+|Weekplanner app | [https://github.com/aau-giraf/weekplanner/releases/tag/2018S4R1](https://github.com/aau-giraf/weekplanner/releases/tag/2018S4R1)            |
+|RestAPI         | [https://github.com/aau-giraf/web-api/releases/tag/2018S4R1](https://github.com/aau-giraf/web-api/releases/tag/2018S4R1)                |
+
+If the source code links for some reason don't work. Look for the release tag `2018S4R1` in wherever the repository is now located.
+
+## PO Requirements for release 2018S4R1 - Guardian Quality of Life
 
 Scheduled for release on Tuesday 15th of May 2018
 ### Relevant user stories
