--- a/docs/releases/2018s3r2.md
+++ b/docs/releases/2018s3r2.md
@@ -1,4 +1,28 @@
-## PO Requirements for release 2018S3R2 - User settings
+# 2018s3r2
+
+| **_Release 2018S3R2 schedule_**        |                 |                                                   |           |
+|----------------------------------------|-----------------| --------------------------------------------------|-----------| 
+| **Deadline**                           | **Date**        | **Document**                                      | **Notes** |
+| Release requirements released          | Mon 2018-04-16  | [Requirements](#requirements) |           |
+| API development finished               | Mon 2018-04-30  |                                                   |           | 
+| App/Frontend development finished      | Thu 2018-05-03  |                                                   |           |
+| PO approves that requirements are met  | Mon 2018-05-07  |                                                   |           |
+| Release                                | Tue 2018-05-08  |                                                   |           |
+
+See the requirements document for a description of what must be implemented before the release can be considered finished. 
+
+## Release
+
+|**Component**   |**Source code**                                                   |
+| -------------- |------------------------------------------------------------------|
+|Weekplanner app | https://github.com/aau-giraf/weekplanner/releases/tag/2018S3R2   |
+|RestAPI         | https://github.com/aau-giraf/web-api/releases/tag/2018S3R2       |
+
+If the source code links for some reason don't work. Look for the release tag `2018S3R2` in wherever the repository is now located.
+
+## Requirements
+
+### PO Requirements for release 2018S3R2 - User settings
 
 Scheduled for releases on Tuesday 8th of May 2018
 
