--- a/docs/releases/2018s3r2.md
+++ b/docs/releases/2018s3r2.md
@@ -35,7 +35,7 @@ The settings menu as shown in the prototype must be implemented and accessible f
 
 Furthermore, the ability for citizens to mark activities as completed, and for guardians to mark activities as cancelled, must be included in this release.
 
-![settings](https://github.com/swuf/wiki/blob/master/releases/2018s3r2/settings.png "settings")
+![settings-image](2018_s3_r2/settings.png)
 
 Following user stories must be implemented:
 
