--- a/docs/releases/2020s2r1.md
+++ b/docs/releases/2020s2r1.md
@@ -1,6 +1,6 @@
 **Release**
 
-These are the user stories that where included in 2020s2r1:
+These are the user stories that were included in 2020s2r1:
 
 | **Issue ID**   |**Developed by**                                                            |
 | -------------- |---------------------------------------------------------------------------|
