--- a/docs/releases/2018s4r1.md
+++ b/docs/releases/2018s4r1.md
@@ -70,19 +70,19 @@ the default "Choose a pictogram" pictogram.
 The following setting must be part of this release. It is a setting that were excluded
 from the previous release.
 
-* Number of days/activities shown in a week (Antal dage/aktiviteter vist for en uge)
-  * This setting can be set to a number between 1 and 7. The citizens perspective
-    will show the activities on the chosen number of days forward from the current
-    day. Unless the chosen number exceeds the days left in the week. (say you choose
-    to show 3 days ahead and the day is Saturday, then only Saturday and Sunday
-    will be shown.) Completed tasks must still be shown, just as usual.
-  * If 1 day is chosen, then the guardian can choose the amount of tasks that is
-    shown in the single day.
-    * For instance, a citizen can handle all activities, but only a single day.
-      Another can handle 5 activities in a single day.
-    * Default must be all activities, but the guardian must have the ability to
-      specify the amount of tasks that the citizen is limited to, if necessary.
-    * **This release must include at least 3, 5, 10, and all activities as options.**
+- Number of days/activities shown in a week (Antal dage/aktiviteter vist for en uge)
+   - This setting can be set to a number between 1 and 7. The citizens perspective
+     will show the activities on the chosen number of days forward from the current
+     day. Unless the chosen number exceeds the days left in the week. (say you choose
+     to show 3 days ahead and the day is Saturday, then only Saturday and Sunday
+     will be shown.) Completed tasks must still be shown, just as usual.
+   - If 1 day is chosen, then the guardian can choose the amount of tasks that is
+     shown in the single day.
+      - For instance, a citizen can handle all activities, but only a single day.
+        Another can handle 5 activities in a single day.
+      - Default must be all activities, but the guardian must have the ability to
+        specify the amount of tasks that the citizen is limited to, if necessary.
+      - **This release must include at least 3, 5, 10, and all activities as options.**
 
 #### Portrait mode when a single day is shown
 
