--- a/docs/releases/2019s2r1.md
+++ b/docs/releases/2019s2r1.md
@@ -18,7 +18,7 @@ These are the user stories that were included in 2019s2r1:
 After this release the most basic functionality of the app were implemented.
 The features that were implemented were:
 
-* The user could log in
-* The user could choose a citizen
-* The user could choose a weekplan belonging to that citizen
-* The chosen week plan with its associated activities were shown on the screen
+- The user could log in
+- The user could choose a citizen
+- The user could choose a weekplan belonging to that citizen
+- The chosen week plan with its associated activities were shown on the screen
