--- a/docs/releases/2020s1r1.md
+++ b/docs/releases/2020s1r1.md
@@ -42,7 +42,7 @@ These are the user stories that were included in 2020s1r1:
 
 In this sprint we fixed various amounts of bugs and some more features.
 
-* A user can now restart a timer more naturally.
-* A user can now edit the details of a weekplan.
-* A user can now edit some of the standard settings for a citizen.
-* A guardian can now choose how many days a citizens sees.
+- A user can now restart a timer more naturally.
+- A user can now edit the details of a weekplan.
+- A user can now edit some of the standard settings for a citizen.
+- A guardian can now choose how many days a citizens sees.
