--- a/docs/releases/2020s3r1.md
+++ b/docs/releases/2020s3r1.md
@@ -43,10 +43,10 @@ These are the user stories that were included in 2020s3r1:
 
 After this release the features that were implemented were:
 
-* The guardian could make a choice board
-* The users could see their legal rights about their information in the system
-* The guardian could change the look of a timer for the citizen
-* The weekplans are separated in upcoming and old
-* The guardian could copy weekplans
-* The guardian could access the setting for the citizen from the weekplan
-* Text is shown if the guardian is missing some input when creating a citizen
+- The guardian could make a choice board
+- The users could see their legal rights about their information in the system
+- The guardian could change the look of a timer for the citizen
+- The weekplans are separated in upcoming and old
+- The guardian could copy weekplans
+- The guardian could access the setting for the citizen from the weekplan
+- Text is shown if the guardian is missing some input when creating a citizen
