--- a/docs/releases/2019s3r1.md
+++ b/docs/releases/2019s3r1.md
@@ -32,12 +32,12 @@ These are the user stories that were included in 2019s3r1:
 After this release some of the most essential features were implemented.
 These were the features that were implemented:
 
-* The user could add a new weekplan
-* The user could add an activity to a weekplan
-* The user could move an activity from one day to another
-* The user could press on an activity to see details about the activity
-* The user could mark an activity as done
-* The user was prompted with a dialog box that required him to type in his
+- The user could add a new weekplan
+- The user could add an activity to a weekplan
+- The user could move an activity from one day to another
+- The user could press on an activity to see details about the activity
+- The user could mark an activity as done
+- The user was prompted with a dialog box that required him to type in his
   password when he wanted to change from citizen to guardian mode
 
 Even though the dialog box for switching between citizen and guardian mode, the
