--- a/docs/releases/2020s2r1.md
+++ b/docs/releases/2020s2r1.md
@@ -44,12 +44,12 @@ These are the user stories that were included in 2020s2r1:
 
 After this release the features that were implemented were:
 
-* The guardian could make a new citizen
-* The guardian could update the colors for the citizens weekplans
-* The guardian could change the look of a completed activity for the citizen
-* The guardian could lock the timer for the citizens
-* The activities has pictogram text shown
-* If an activity has a timer, an indicator is shown
-* Buttons to mark and unmark all activities for one day
-* The chosen setting shown in the setting page
-* Error popup when pictogram upload failed
+- The guardian could make a new citizen
+- The guardian could update the colors for the citizens weekplans
+- The guardian could change the look of a completed activity for the citizen
+- The guardian could lock the timer for the citizens
+- The activities has pictogram text shown
+- If an activity has a timer, an indicator is shown
+- Buttons to mark and unmark all activities for one day
+- The chosen setting shown in the setting page
+- Error popup when pictogram upload failed
