Changed file names for releases in 2020
Changed file names for the releases in the first semester by adding an "f" after the year in order to support adding releases in the second semester.

--- a/docs/releases/2020fs1r1.md
+++ b/docs/releases/2020fs1r1.md
@@ -1,6 +1,6 @@
 **Release**
 
-These are the user stories that were included in 2020s1r1:
+These are the user stories that were included in 2020fs1r1:
 
 | **Issue ID**   |**Developed by**                                                            |
 | -------------- |---------------------------------------------------------------------------|
