--- a/docs/Releases/2020E/2020es3r1.md
+++ b/docs/Releases/2020E/2020es3r1.md
@@ -1,18 +1,17 @@
 # 2020s3r1
 
-The goal of this release was to improve the general stability of the application. By implementing as well as adding features requested by the customer.
-
+The goal of this release was to improve the general stability of the application, as well as implementing features requested by the customer.
 
 ## Completed Issues
 
-In the following, a list of the issues completed in the different repositories will be shown.
+In the following, a list of the issues completed in the different repositories is shown.
 
 ### weekplanner
 
 #### Issues
 
 |Number |Title |Solved by PR |
- |:---------|:---------|:---------|
+|:---------|:---------|:---------|
 [703](https://github.com/aau-giraf/weekplanner/issues/703) |Timer does not get removed when a timer is running |
 [695](https://github.com/aau-giraf/weekplanner/issues/695) |Buggy "fortryd" "aflys" and "done" buttons |
 [683](https://github.com/aau-giraf/weekplanner/issues/683) |The function checkServerConnection always throws an error |[686](https://github.com/aau-giraf/weekplanner/issues/686)  
@@ -104,7 +103,7 @@ In the following, a list of the issues completed in the different repositories w
 #### Issues  
 
 |Number |Title |Solved by PR |
- |:---------|:---------|:---------|
+|:---------|:---------|:---------|
 [170](https://github.com/aau-giraf/web-api/issues/170) |As a developer I would like support for renaming activities locally |[174](https://github.com/aau-giraf/web-api/issues/174)  
 [168](https://github.com/aau-giraf/web-api/issues/168) |DEV server no longer works properly |
 [167](https://github.com/aau-giraf/web-api/issues/167) |Searching pictograms should not be case sensitive |[169](https://github.com/aau-giraf/web-api/issues/169)  
@@ -129,7 +128,7 @@ In the following, a list of the issues completed in the different repositories w
 #### Issues  
 
 |Number |Title |Solved by PR |
- |:---------|:---------|:---------|
+|:---------|:---------|:---------|
 [81](https://github.com/aau-giraf/api_client/issues/81) |Updating order of activities when reordering in the weekplan |[86](https://github.com/aau-giraf/api_client/issues/86)  
 [80](https://github.com/aau-giraf/api_client/issues/80) |As a developer I would like an interface for the offline features |[83](https://github.com/aau-giraf/api_client/issues/83)  
 [74](https://github.com/aau-giraf/api_client/issues/74) |As a developer I would like the pictogram model to have a the Id of the creating user |[75](https://github.com/aau-giraf/api_client/issues/75)  
@@ -137,7 +136,7 @@ In the following, a list of the issues completed in the different repositories w
 [52](https://github.com/aau-giraf/api_client/issues/52) |Fundamental bug in the offline repository |
 [3](https://github.com/aau-giraf/api_client/issues/3) |Implement updateIcon in user_api.dart |
 
-## Result:
+## Result
 
 Based on the implemented issues, the following have been accomplished:
  - Searching no longer case sensitive
