Updated again, linter, please work.

--- a/docs/Releases/2020E/2020es3r1.md
+++ b/docs/Releases/2020E/2020es3r1.md
@@ -8,7 +8,6 @@ In the following, a list of the issues completed in the different repositories i
 
 ### weekplanner
 
-#### Issues
 
 
 |Number |Title |Solved by PR |
@@ -101,8 +100,6 @@ In the following, a list of the issues completed in the different repositories i
 
 ### web-api  
 
-#### Issues  
-
 
 |Number |Title |Solved by PR |
 |:---------|:---------|:---------|
@@ -127,13 +124,10 @@ In the following, a list of the issues completed in the different repositories i
 
 ### api_client  
 
-#### Issues  
-
 
 |Number |Title |Solved by PR |
 |:---------|:---------|:---------|
 [81](https://github.com/aau-giraf/api_client/issues/81) |Updating order of activities when reordering in the weekplan |[86](https://github.com/aau-giraf/api_client/issues/86)  
-[80](https://github.com/aau-giraf/api_client/issues/80) |As a developer I would like an interface for the offline features |[83](https://github.com/aau-giraf/api_client/issues/83)  
 [74](https://github.com/aau-giraf/api_client/issues/74) |As a developer I would like the pictogram model to have a the Id of the creating user |[75](https://github.com/aau-giraf/api_client/issues/75)  
 [56](https://github.com/aau-giraf/api_client/issues/56) |Refactor the code so we don't use the Observable class |[73](https://github.com/aau-giraf/api_client/issues/73)  
 [52](https://github.com/aau-giraf/api_client/issues/52) |Fundamental bug in the offline repository |
@@ -144,13 +138,13 @@ In the following, a list of the issues completed in the different repositories i
 
 Based on the implemented issues, the following have been accomplished:
 
- - Searching no longer case sensitive
- - Stop buttins on timers have become restart button.
+ - Searching is no longer case sensitive
  - Guardians can unmark completed activities
- - Citizens can reeenter completed activities
+ - Citizens can reenter completed activities
  - Guardians can log out from the "Show activity" screens
- - Moving weekplans optimized, so it no longer reloads the entire weekplan.
- - Added more faster, and better notifications when errors occour.
+ - Moving week plans has been optimized, so it no longer reloads the entire week plan
+ - Added new and improved existing notifications when errors occur.
  - "Overståede uger" can be collapsed
  - Citizens can view two days at the time
  - Multiple cancelled activities can be resumed at once
+ - Furthermore several bugs have been ironed out
