--- a/docs/Releases/2020E/2020es3r1.md
+++ b/docs/Releases/2020E/2020es3r1.md
@@ -127,11 +127,11 @@ In the following, a list of the issues completed in the different repositories i
 
 |Number |Title |Solved by PR |
 |:---------|:---------|:---------|
-[81](https://github.com/aau-giraf/api_client/issues/81) |Updating order of activities when reordering in the weekplan |[86](https://github.com/aau-giraf/api_client/issues/86)  
-[74](https://github.com/aau-giraf/api_client/issues/74) |As a developer I would like the pictogram model to have a the Id of the creating user |[75](https://github.com/aau-giraf/api_client/issues/75)  
-[56](https://github.com/aau-giraf/api_client/issues/56) |Refactor the code so we don't use the Observable class |[73](https://github.com/aau-giraf/api_client/issues/73)  
-[52](https://github.com/aau-giraf/api_client/issues/52) |Fundamental bug in the offline repository |
-[3](https://github.com/aau-giraf/api_client/issues/3) |Implement updateIcon in user_api.dart |
+|[81](https://github.com/aau-giraf/api_client/issues/81) |Updating order of activities when reordering in the weekplan |[86](https://github.com/aau-giraf/api_client/issues/86) |
+|[74](https://github.com/aau-giraf/api_client/issues/74) |As a developer I would like the pictogram model to have a the Id of the creating user |[75](https://github.com/aau-giraf/api_client/issues/75) |
+|[56](https://github.com/aau-giraf/api_client/issues/56) |Refactor the code so we don't use the Observable class |[73](https://github.com/aau-giraf/api_client/issues/73) |
+|[52](https://github.com/aau-giraf/api_client/issues/52) |Fundamental bug in the offline repository | |
+|[3](https://github.com/aau-giraf/api_client/issues/3) |Implement updateIcon in user_api.dart | |
 
 
 ## Result
