--- a/docs/Releases/2020E/2020es3r1.md
+++ b/docs/Releases/2020E/2020es3r1.md
@@ -79,22 +79,21 @@ In the following, a list of the issues completed in the different repositories i
 | [444](https://github.com/aau-giraf/weekplanner/issues/444) | Marking an activity with a timer as complete and then unmark it causes the activity to be deleted. | |
 | [441](https://github.com/aau-giraf/weekplanner/issues/441) | Make the disable buttons have 40% opacity | |
 | [439](https://github.com/aau-giraf/weekplanner/issues/439) | Lines appear around completed activities in citizen mode | |
-
-|[438](https://github.com/aau-giraf/weekplanner/issues/438) |As a developer I would want a file with the font sizes for the different screens in the weekplan |[599](https://github.com/aau-giraf/weekplanner/issues/599)   |
-|[434](https://github.com/aau-giraf/weekplanner/issues/434) |As a guardian I would like a citizen to be able to view two days at a time so that they can see today and tomorrow |[566](https://github.com/aau-giraf/weekplanner/issues/566)   |
-|[429](https://github.com/aau-giraf/weekplanner/issues/429) |As a guardian, I would like to know when I have written a wrong login fast |[653](https://github.com/aau-giraf/weekplanner/issues/653)   |
-|[428](https://github.com/aau-giraf/weekplanner/issues/428) |As a guardian, I would like to have an error message when creating a user who already exists |[561](https://github.com/aau-giraf/weekplanner/issues/561)   |
-|[425](https://github.com/aau-giraf/weekplanner/issues/425) |Periodic errors in asynchronous tests | |
-|[396](https://github.com/aau-giraf/weekplanner/issues/396) |As a guardian I would like to have access to x number of pictograms in offline mode using the local database. | |
-|[384](https://github.com/aau-giraf/weekplanner/issues/384) |As a developer i would like the app to be deployed to Google Play when it is merged into master | |
-|[371](https://github.com/aau-giraf/weekplanner/issues/371) |As a guardian i would like to resume multiple canceled activities in the weekplan edit screen |[664](https://github.com/aau-giraf/weekplanner/issues/664)   |
-|[364](https://github.com/aau-giraf/weekplanner/issues/364) |Warning on memory waste/security issue for API lvl 19 |[647](https://github.com/aau-giraf/weekplanner/issues/647)   |
-|[352](https://github.com/aau-giraf/weekplanner/issues/352) |Timer is not saved when you cancel activity and then undo the cancel | |
-|[327](https://github.com/aau-giraf/weekplanner/issues/327) |Artifacts | |
-|[308](https://github.com/aau-giraf/weekplanner/issues/308) |Visible red line when timer has finished. |[594](https://github.com/aau-giraf/weekplanner/issues/594)| 
-|[304](https://github.com/aau-giraf/weekplanner/issues/304) |The 'add new weekplan'-button is still available in edit-mode, but does nothing. |[560](https://github.com/aau-giraf/weekplanner/issues/560)   |
-|[273](https://github.com/aau-giraf/weekplanner/issues/273) |As a guardian I would like to be able to delete pictograms I've uploaded so that I can remove wrongly uploaded / outdated pictograms |[606](https://github.com/aau-giraf/weekplanner/issues/606)   |
-|[206](https://github.com/aau-giraf/weekplanner/issues/206) |API Exceptions are thrown everywhere where an api call was made previously when the log out button is pressed | |
+| [438](https://github.com/aau-giraf/weekplanner/issues/438) | As a developer I would want a file with the font sizes for the different screens in the weekplan | [599](https://github.com/aau-giraf/weekplanner/issues/599)   |
+| [434](https://github.com/aau-giraf/weekplanner/issues/434) | As a guardian I would like a citizen to be able to view two days at a time so that they can see today and tomorrow | [566](https://github.com/aau-giraf/weekplanner/issues/566)   |
+| [429](https://github.com/aau-giraf/weekplanner/issues/429) | As a guardian, I would like to know when I have written a wrong login fast | [653](https://github.com/aau-giraf/weekplanner/issues/653)   |
+| [428](https://github.com/aau-giraf/weekplanner/issues/428) | As a guardian, I would like to have an error message when creating a user who already exists | [561](https://github.com/aau-giraf/weekplanner/issues/561)   |
+| [425](https://github.com/aau-giraf/weekplanner/issues/425) | Periodic errors in asynchronous tests | |
+| [396](https://github.com/aau-giraf/weekplanner/issues/396) | As a guardian I would like to have access to x number of pictograms in offline mode using the local database | |
+| [384](https://github.com/aau-giraf/weekplanner/issues/384) | As a developer i would like the app to be deployed to Google Play when it is merged into master | |
+| [371](https://github.com/aau-giraf/weekplanner/issues/371) | As a guardian i would like to resume multiple canceled activities in the weekplan edit screen | [664](https://github.com/aau-giraf/weekplanner/issues/664)   |
+| [364](https://github.com/aau-giraf/weekplanner/issues/364) | Warning on memory waste/security issue for API lvl 19 | [647](https://github.com/aau-giraf/weekplanner/issues/647)   |
+| [352](https://github.com/aau-giraf/weekplanner/issues/352) | Timer is not saved when you cancel activity and then undo the cancel | |
+| [327](https://github.com/aau-giraf/weekplanner/issues/327) | Artifacts | |
+| [308](https://github.com/aau-giraf/weekplanner/issues/308) | Visible red line when timer has finished. | [594](https://github.com/aau-giraf/weekplanner/issues/594)| 
+| [304](https://github.com/aau-giraf/weekplanner/issues/304) | The 'add new weekplan'-button is still available in edit-mode, but does nothing. | [560](https://github.com/aau-giraf/weekplanner/issues/560)   |
+| [273](https://github.com/aau-giraf/weekplanner/issues/273) | As a guardian I would like to be able to delete pictograms I've uploaded so that I can remove wrongly uploaded / outdated pictograms | [606](https://github.com/aau-giraf/weekplanner/issues/606)   |
+| [206](https://github.com/aau-giraf/weekplanner/issues/206) | API Exceptions are thrown everywhere where an api call was made previously when the log out button is pressed | |
 
 
 
