--- a/docs/Releases/2020E/2020es3r1.md
+++ b/docs/Releases/2020E/2020es3r1.md
@@ -90,7 +90,10 @@ In the following, a list of the issues completed in the different repositories i
 | [364](https://github.com/aau-giraf/weekplanner/issues/364) | Warning on memory waste/security issue for API lvl 19 | [647](https://github.com/aau-giraf/weekplanner/issues/647)   |
 | [352](https://github.com/aau-giraf/weekplanner/issues/352) | Timer is not saved when you cancel activity and then undo the cancel | |
 | [327](https://github.com/aau-giraf/weekplanner/issues/327) | Artifacts | |
-
+| [308](https://github.com/aau-giraf/weekplanner/issues/308) | Visible red line when timer has finished. | [594](https://github.com/aau-giraf/weekplanner/issues/594) | 
+| [304](https://github.com/aau-giraf/weekplanner/issues/304) | The 'add new weekplan'-button is still available in edit-mode, but does nothing. | [560](https://github.com/aau-giraf/weekplanner/issues/560)   |
+| [273](https://github.com/aau-giraf/weekplanner/issues/273) | As a guardian I would like to be able to delete pictograms I've uploaded so that I can remove wrongly uploaded / outdated pictograms | [606](https://github.com/aau-giraf/weekplanner/issues/606)   |
+| [206](https://github.com/aau-giraf/weekplanner/issues/206) | API Exceptions are thrown everywhere where an api call was made previously when the log out button is pressed | |
 
 
 
@@ -102,7 +105,7 @@ In the following, a list of the issues completed in the different repositories i
 |:---------|:---------|:---------|
 |[170](https://github.com/aau-giraf/web-api/issues/170) |As a developer I would like support for renaming activities locally |[174](https://github.com/aau-giraf/web-api/issues/174) |
 |[168](https://github.com/aau-giraf/web-api/issues/168) |DEV server no longer works properly | |
-|[167](https://github.com/aau-giraf/web-api/issues/167) |Searching pictograms should not be case sensitive |[169](https://github.com/aau-giraf/web-api/issues/169)| 
+|[167](https://github.com/aau-giraf/web-api/issues/167) |Searching pictograms should not be case sensitive |[169](https://github.com/aau-giraf/web-api/issues/169) | 
 |[162](https://github.com/aau-giraf/web-api/issues/162) |As a developer I would like for pictograms to have a GirafUser indicating the creating user, so that I can make sure that only the creating user can delete pictograms. | |
 |[159](https://github.com/aau-giraf/web-api/issues/159) |Images should be hashed, and saved in the ImageHash row  |[173](https://github.com/aau-giraf/web-api/issues/173)  |
 |[158](https://github.com/aau-giraf/web-api/issues/158) |Error messages from English to Danish | |
