--- a/docs/Releases/2020E/2020es3r1.md
+++ b/docs/Releases/2020E/2020es3r1.md
@@ -93,9 +93,7 @@ In the following, a list of the issues completed in the different repositories i
 | [304](https://github.com/aau-giraf/weekplanner/issues/304) | The 'add new weekplan'-button is still available in edit-mode, but does nothing. | [560](https://github.com/aau-giraf/weekplanner/issues/560)   |
 | [273](https://github.com/aau-giraf/weekplanner/issues/273) | As a guardian I would like to be able to delete pictograms I've uploaded so that I can remove wrongly uploaded / outdated pictograms | [606](https://github.com/aau-giraf/weekplanner/issues/606)   |
 | [206](https://github.com/aau-giraf/weekplanner/issues/206) | API Exceptions are thrown everywhere where an api call was made previously when the log out button is pressed | |
-
-
-
+| [308](https://github.com/aau-giraf/weekplanner/issues/308) | Visible red line when timer has finished. | [594](https://github.com/aau-giraf/weekplanner/issues/594) | 
 
 ### web-api  
 
